<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.info.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/info_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/creators"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="@id/info_title_txt"
            app:layout_constraintEnd_toEndOf="@id/info_title_txt"
            app:layout_constraintTop_toBottomOf="@id/info_title_txt"
            app:layout_constraintBottom_toTopOf="@id/movahed_img"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/movahed_img"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"/>

        <TextView
            android:id="@+id/movahed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movahed_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/movahed_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/movahed_stdnum"
            app:layout_constraintTop_toTopOf="@id/movahed_img"/>

        <TextView
            android:id="@+id/movahed_stdnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movahed_student_number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/movahed_name"
            app:layout_constraintTop_toBottomOf="@id/movahed_name"
            app:layout_constraintBottom_toBottomOf="@id/movahed_img"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pooya_img"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movahed_img"/>

        <TextView
            android:id="@+id/pooya_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pooya_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/pooya_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pooya_stdnum"
            app:layout_constraintTop_toTopOf="@id/pooya_img"/>

        <TextView
            android:id="@+id/pooya_stdnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pooya_student_number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/pooya_name"
            app:layout_constraintTop_toBottomOf="@id/pooya_name"
            app:layout_constraintBottom_toBottomOf="@id/pooya_img"/>

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="0dp"
            style="@style/Divider"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/pooya_img"/>

        <TextView
            android:id="@+id/desc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/info_description"
            app:layout_constraintStart_toStartOf="@id/divider_bottom"
            app:layout_constraintEnd_toEndOf="@id/divider_bottom"
            app:layout_constraintTop_toBottomOf="@id/divider_bottom"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>