<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details.DetailsFragment">

    <data>
        <variable
            name="artist"
            type="com.example.mobilenetassignment2.model.entity.ArtistEntity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/artist_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#ccc"
                artistImage="@{artist}"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="H, 4:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_event_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/artist_toolbar_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back_arrow"
                android:theme="@style/ToolbarStyle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:layout_marginTop="-24dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner">

            <TextView
                android:id="@+id/artist_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/colorPrimaryDark"
                android:text="@{artist.name}"
                tools:text="Artist Name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/artist_nation_type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                subtitleFormatted="@{artist}"
                tools:text="American actor"
                app:layout_constraintStart_toStartOf="@id/artist_name_txt"
                app:layout_constraintTop_toBottomOf="@id/artist_name_txt"/>

            <View
                android:id="@+id/divider"
                style="@style/Divider"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/artist_name_txt"
                app:layout_constraintTop_toBottomOf="@id/artist_nation_type_txt"/>

            <TextView
                android:id="@+id/born_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/born"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="@id/artist_name_txt"/>

            <TextView
                android:id="@+id/born_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{artist.birthDate}"
                tools:text="03/30/1853"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/born_label"
                app:layout_constraintBaseline_toBaselineOf="@id/born_label"/>

            <TextView
                android:id="@+id/died_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/died"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/born_label"
                app:layout_constraintStart_toStartOf="@id/born_label"/>

            <TextView
                android:id="@+id/died_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                deathDate="@{artist}"
                tools:text="07/29/1890"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/born_txt"
                app:layout_constraintBaseline_toBaselineOf="@id/died_label"/>

            <TextView
                android:id="@+id/birth_place_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_place"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/died_label"
                app:layout_constraintStart_toStartOf="@id/died_label"/>

            <TextView
                android:id="@+id/birth_place_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{artist.birthPlace}"
                tools:text="New York, United States"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/birth_place_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/birth_place_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>